# gw

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml  single-command-plan.md  spec.md
docs/: spec.md
gw/: __init__.py  __main__.py  app.py  cache.py  cache_db.py  cli.py  gh_ops.py  git.py  git_ops.py  hooks.py  models.py  services.py  tui.py  ui.py
src/: cache_db.rs  cli.rs  gh_ops.rs  git_ops.rs  hooks.rs  main.rs  models.rs  services.rs  tui.rs
tests/: test_core.py
