[package]
name = "gw"
version = "0.1.1"
edition = "2021"
description = "Git worktree manager"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"

[profile.release]
codegen-units = 1
lto = true
