[project]
name = "gw"
version = "0.1.0"
description = "Git worktree manager"
readme = "spec.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]
dependencies = [
  "click>=8.1",
  "questionary>=2.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project.scripts]
gw = "gw.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.uv]
managed = true
package = true

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "ty>=0.0.14",
]
