[project]
name = "gw"
version = "0.1.0"
description = "Git worktree manager"
requires-python = ">=3.11"
dependencies = ["click>=8.1"]

[project.scripts]
gw = "gw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
